--- a/wordpress/wp-content/themes/fabioschicken/less/variables.less
+++ b/wordpress/wp-content/themes/fabioschicken/less/variables.less
@@ -8,5 +8,11 @@
 @splash-text-height-xxs: 300px;
 @splash-text-border-width: 300px;
 
+@burger-bar-height:5px;
+@burger-bar-width:50px;
+@burger-bar-padding:15px;
+@burger-icon-height:(@burger-bar-height * 3) + (@burger-bar-padding * 2);
+
 @nav-bg:#ff0000;
 @nav-height:50px;
+@nav-height-mobile:@burger-icon-height + 20;
